# backend

./: README.md  pyproject.toml
config/: settings.py
plantio/: admin.py  apps.py  models.py  serializers.py  ulrs.py  views.py
plantio/migrations/: 0001_initial.py  0002_cultura.py  0003_propriedade_alter_tipoinsumo_options_plantio_and_more.py  0004_alter_insumo_tipo.py
